k8s-practice3/k8s/04-postgres-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: practice3-postgres
  namespace: practice3
spec:
  serviceName: practice3-postgres
  replicas: 1
  selector:
    matchLabels:
      app: practice3-postgres
  template:
    metadata:
      labels:
        app: practice3-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - name: postgres
              containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: postgres-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
