k8s-practice3/k8s/05-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: practice3-app
  namespace: practice3
spec:
  replicas: 2
  selector:
    matchLabels:
      app: practice3-app
  template:
    metadata:
      labels:
        app: practice3-app
    spec:
      containers:
        - name: practice3-app
          image: artur303/k8s-practice3:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
