k8s-practice3/k8s/03-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: practice3-postgres
  namespace: practice3
spec:
  clusterIP: None
  selector:
    app: practice3-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
