k8s-practice3/k8s/08-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: practice3-gateway
  namespace: practice3
spec:
  gatewayClassName: eg
  listeners:
    - name: http
      hostname: practice3.localhost
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same
