k8s-practice3/k8s/09-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: practice3-route
  namespace: practice3
spec:
  parentRefs:
    - name: practice3-gateway
  hostnames:
    - practice3.localhost
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: practice3-app
          port: 80
